chore: update config and theme

--- a/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
@@ -299,7 +299,7 @@
     }
 
     .highlight {
-        background-color: var(--pre-background-color);
+        background-color: #272822;
         padding: var(--card-padding);
         position: relative;
 
